syntax = "proto3";

option csharp_namespace = "ClinicServiceProtos";

package proto;

service AuthenticationService{
	rpc Login (AuthenticationRequest) returns (AuthenticationResponse);
	rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
}


message AuthenticationRequest{
	string login = 1;
	string password = 2;
}

message AuthenticationResponse{
	int32 status = 1;
	SessionContext SessionContext = 2;
}

message SessionContext{
	int32 sessionId = 1;
	string sessionToken = 2;
	AccountDto Account = 3;
}

message AccountDto{
	int32 id = 1;
	string email = 2;
	bool locked = 3;
	string firstName = 4;
	string surname = 5;
	string patronymic = 6;
}

message GetSessionRequest{
}

message GetSessionResponse{
	SessionContext sessionContext = 1;
}